0.8.2:
  - RDS implementation: queries listing is saved in a dedicated in-memory
    structure called RDS, for Reusable Data Set. The first call to use a
    path (usually a readdir(), but that's not an absolute rule) fill fill
    the RDS and store it in a cache. Subsequent calls on the same path
    will reuse the cached version, until a modifying query (mknod, symlink
    and so on) will invalidate the cache. This results in a sensible speed
    up of query resolution and result listing.

  - export/ directory: as requested by many, Tagsistant content can be
    exported using the export/ directory. It contains a subdir for each
    tag, filled of symlinks pointing to the respective object inside the
    archive/ directory. So basically, making a full backup of the archive/
    and export/ directories is enough to have a complete off-line readable
    backup of a repository. Triple tags are combined using the pattern
    "namespace:key=value".

0.8.1:
  - Implemented the 'required' relation. If a tag M is required by S
    then the S tag is shown only if the M tag has been already included
    by the last OR branch of the query, like in:

      store/M/
      store/P/Q/+/M/

    but will not be shown in:

      store/P/
      store/P/+/Q/

    The goal of this relation is to organize the tags in a hierarchical
    structure to keep the root directory clean. It somehow complement the
    function of namespaces.

  - Support for POSIX ACL on objects stored inside the store/ dir

  - Goes in the background before calling fuse_main(), which prevents
    the autotagging thread from being properly scheduled

0.8:
  - Triple tags (a.k.a. machine tags) first implementation!

  - renamed the tags/ directory as store/ and created a new tags/
    directory to allow a cleaner tag management from file managers

  - Alias first implementation. The user can create files in the
    alias/ directory. Each file contains a portion of a query.